fix(shop): PAID→INCOME 원자 fulfill + 환불 전 주문귀속 INCOME
첫 자동 fulfill이 부모 TX 미커밋 APPROVED를 REQUIRES_NEW에서 못 봐
FAILED→재이행이 되던 RCA를 afterCommit 이행으로 제거하고, 회기+입금
INCOME을 단일 REQUIRES_NEW로 묶어 반쪽 성공을 없앤다. 환불은 현재
주문 귀속 INCOME이 있을 때만 EXPENSE(타주문 INCOME 가로채기 금지).

Co-authored-by: beta0629 <beta0629@users.noreply.github.com>